compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__constructing_anonymous_function_is_pure.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3641
expression: "\nfn make_panic(message) {\n  fn() { panic as message }\n}\n\npub fn main() {\n  make_panic(\"This is a crash\")\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn make_panic(message) {
  fn() { panic as message }
}

pub fn main() {
  make_panic("This is a crash")
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:7:3
  │
7 │   make_panic("This is a crash")
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
