compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__deprecated_list_append_syntax.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2155
expression: "\n    pub fn main() {\n      let letters = [\"b\", \"c\"]\n      [\"a\"..letters]\n    }\n        "
snapshot_kind: text
---
----- SOURCE CODE

    pub fn main() {
      let letters = ["b", "c"]
      ["a"..letters]
    }
        

----- WARNING
warning: Deprecated prepend syntax
  ┌─ test/path:4:11
  │
4 │       ["a"..letters]
  │           ^^ This spread should be preceded by a comma

This syntax for prepending to a list is deprecated.
When prepending an item to a list it should be preceded by a comma, like
this: `[item, ..list]`.
