compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__deprecated_list_pattern_syntax_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2183
expression: "\n    pub fn main() {\n      let letters = [\"b\", \"c\"]\n      case letters {\n        [] -> []\n        [..] -> []\n      }\n    }\n        "
snapshot_kind: text
---
----- SOURCE CODE

    pub fn main() {
      let letters = ["b", "c"]
      case letters {
        [] -> []
        [..] -> []
      }
    }
        

----- WARNING
warning: Deprecated list pattern matching syntax
  ┌─ test/path:6:9
  │
6 │         [..] -> []
  │         ^^^^ This can be replaced with `_`

This syntax for pattern matching on lists is deprecated.
To match on all possible lists, use the `_` catch-all pattern instead.
